pda项目模块-资产管理增删查改

--- a/zungen-module-erp/zungen-module-erp-biz/pom.xml
+++ b/zungen-module-erp/zungen-module-erp-biz/pom.xml
@@ -51,6 +51,12 @@
       <artifactId>zungen-spring-boot-starter-security</artifactId>
     </dependency>
 
+    <!-- 工具 -->
+    <dependency>
+      <groupId>com.zungen.wb</groupId>
+      <artifactId>zungen-spring-boot-starter-excel</artifactId>
+    </dependency>
+
     <!-- DB 相关 -->
     <dependency>
       <groupId>com.zungen.wb</groupId>
