pda系统应对检查版本

--- a/zungen-framework/pom.xml
+++ b/zungen-framework/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>zungen</artifactId>
         <groupId>com.zungen.wb</groupId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <packaging>pom</packaging>
     <modules>
