--- a/zungen-framework/zungen-spring-boot-starter-biz-social/pom.xml
+++ b/zungen-framework/zungen-spring-boot-starter-biz-social/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.zungen.wb</groupId>
         <artifactId>zungen-framework</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
