--- a/zungen-framework/zungen-spring-boot-starter-web/pom.xml
+++ b/zungen-framework/zungen-spring-boot-starter-web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.zungen.wb</groupId>
         <artifactId>zungen-framework</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zungen-spring-boot-starter-web</artifactId>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-infra-api</artifactId> <!-- 需要使用它，进行操作日志的记录 -->
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <!-- 服务保障相关 -->
