--- a/zungen-module-bpm/pom.xml
+++ b/zungen-module-bpm/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>zungen</artifactId>
         <groupId>com.zungen.wb</groupId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <modules>
