--- a/zungen-module-erp/zungen-module-erp-biz/pom.xml
+++ b/zungen-module-erp/zungen-module-erp-biz/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.zungen.wb</groupId>
     <artifactId>zungen-module-erp</artifactId>
-    <version>1.6.3-SNAPSHOT</version>
+    <version>${revision}</version>
   </parent>
 
   <artifactId>zungen-module-erp-biz</artifactId>
@@ -18,12 +18,12 @@
     <dependency>
       <groupId>com.zungen.wb</groupId>
       <artifactId>zungen-module-erp-api</artifactId>
-      <version>1.6.3-SNAPSHOT</version>
+      <version>${revision}</version>
     </dependency>
     <dependency>
       <groupId>com.zungen.wb</groupId>
       <artifactId>zungen-module-system-api</artifactId>
-      <version>1.6.3-SNAPSHOT</version>
+      <version>${revision}</version>
     </dependency>
 
     <!-- 业务组件 -->
