--- a/zungen-module-infra/zungen-module-infra-biz/pom.xml
+++ b/zungen-module-infra/zungen-module-infra-biz/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.zungen.wb</groupId>
         <artifactId>zungen-module-infra</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zungen-module-infra-biz</artifactId>
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-system-api</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-infra-api</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <!-- 业务组件 -->
@@ -120,23 +120,23 @@
             <artifactId>zungen-spring-boot-starter-file</artifactId>
         </dependency>
 
-        <!-- RPC 相关 -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-        </dependency>
+<!--        &lt;!&ndash; RPC 相关 &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.dubbo</groupId>-->
+<!--            <artifactId>dubbo</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.dubbo</groupId>-->
+<!--            <artifactId>dubbo-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.curator</groupId>-->
+<!--            <artifactId>curator-framework</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.curator</groupId>-->
+<!--            <artifactId>curator-recipes</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
