--- a/zungen-module-member/zungen-module-member-api/pom.xml
+++ b/zungen-module-member/zungen-module-member-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.zungen.wb</groupId>
         <artifactId>zungen-module-member</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zungen-module-member-api</artifactId>
