--- a/zungen-server/Dockerfile
+++ b/zungen-server/Dockerfile
@@ -6,7 +6,7 @@ FROM eclipse-temurin:8-jre
 RUN mkdir -p /zungen-server
 WORKDIR /zungen-server
 ## 将后端项目的 Jar 文件，复制到镜像中
-COPY ./target/zungen-server.jar app.jar
+COPY ./zungen-server.jar app.jar
 
 ## 设置 TZ 时区
 ## 设置 JAVA_OPTS 环境变量，可通过 docker run -e "JAVA_OPTS=" 进行覆盖
@@ -16,4 +16,4 @@ ENV TZ=Asia/Shanghai JAVA_OPTS="-Xms512m -Xmx512m"
 EXPOSE 48080
 
 ## 启动后端项目
-CMD java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar app.jar
+CMD java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -Dspring.profiles.active=local -jar app.jar
