--- a/zungen-server/pom.xml
+++ b/zungen-server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.zungen.wb</groupId>
         <artifactId>zungen</artifactId>
-        <version>1.6.3-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -23,17 +23,17 @@
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-member-biz</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-system-biz</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-infra-biz</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.zungen.wb</groupId>-->
@@ -60,14 +60,14 @@
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-bpm-biz</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <!-- pda模块 -->
         <dependency>
             <groupId>com.zungen.wb</groupId>
             <artifactId>zungen-module-erp-biz</artifactId>
-            <version>1.6.3-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
@@ -89,22 +89,22 @@
         </dependency>
 
         <!-- RPC 相关 -->
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-recipes</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.dubbo</groupId>-->
+<!--            <artifactId>dubbo</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.dubbo</groupId>-->
+<!--            <artifactId>dubbo-spring-boot-starter</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.curator</groupId>-->
+<!--            <artifactId>curator-framework</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.curator</groupId>-->
+<!--            <artifactId>curator-recipes</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
