--- a/zungen-server/src/main/resources/application.yaml
+++ b/zungen-server/src/main/resources/application.yaml
@@ -55,23 +55,35 @@ mybatis-plus:
 #      id-type: ASSIGN_ID # 分配 ID，默认使用雪花算法。注意，Oracle、PostgreSQL、Kingbase、DB2、H2 数据库时，需要去除实体类上的 @KeySequence 注解
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
-  type-aliases-package: ${zungen.info.base-package}.module.*.dal.dataobject
+#  type-aliases-package: ${zungen.info.base-package}.module.*.dal.dataobject
+  mapper-locations: classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml #第一个是自己写xml的路径，第二个是固定的
 
---- #################### RPC相关配置 ####################
-dubbo:
-  # Dubbo 应用配置
-  application:
-    name: zungen-admin # 应用名
-  # Dubbo 服务提供者配置
-  provider:
-    timeout: 1000 # 【重要】远程服务调用超时时间，单位：毫秒。默认为 1000 毫秒，胖友可以根据自己业务修改
-    #    filter: -exception # 去掉 ExceptionFilter
-  protocol:
-    name: dubbo
-    port: -1
-  # 扫描服务实现类
-  scan:
-    base-packages: com.zungen.wb.module.system.api,com.zungen.wb.module.infra.api
+#actable:
+#  table:
+#    auto: update
+#    #create系统启动后，会将所有的表删除掉，然后根据model中配置的结构重新建表，该操作会破坏原有数据。
+#    #update系统会自动判断哪些表是新建的．哪些字段要修改类型等，哪些字段要删除，哪些字段要新增，该操作不会破坏原有数据。#none系统不做任何处理。
+#    #add新增表/新增字段/新增索引新增唯一约束的功能，不做做修改和删除(只在版本1.0.9.RELEASE及以上支持)。model:
+#  model:
+#    pack: com.zungen.wb.module.erp.dal.dataobject #扫描用于创建表的对象的包名，多个包用"."隔开
+#  database:
+#    type: mysql #数据库类型目前只支持mysql
+
+#--- #################### RPC相关配置 ####################
+#dubbo:
+#  # Dubbo 应用配置
+#  application:
+#    name: zungen-admin # 应用名
+#  # Dubbo 服务提供者配置
+#  provider:
+#    timeout: 1000 # 【重要】远程服务调用超时时间，单位：毫秒。默认为 1000 毫秒，胖友可以根据自己业务修改
+#    #    filter: -exception # 去掉 ExceptionFilter
+#  protocol:
+#    name: dubbo
+#    port: -1
+#  # 扫描服务实现类
+#  scan:
+#    base-packages: com.zungen.wb.module.system.api,com.zungen.wb.module.infra.api
 
 
 
@@ -107,7 +119,7 @@ zungen:
       - com.zungen.wb.module.pay.enums.ErrorCodeConstants
       - com.zungen.wb.module.system.enums.ErrorCodeConstants
   tenant: # 多租户相关配置项
-    enable: true
+    enable: false
     ignore-urls:
       - /admin-api/system/tenant/get-id-by-name # 基于名字获取租户，不许带租户编号
       - /admin-api/system/captcha/get-image # 获取图片验证码，和租户无关
