--- a/zungen-server/src/main/resources/application-dev.yaml
+++ b/zungen-server/src/main/resources/application-dev.yaml
@@ -44,21 +44,21 @@ spring:
       primary: master
       datasource:
         master:
-          name: zungen-admin-v1.6
-          url: jdbc:mysql://192.168.124.10:3306/${spring.datasource.dynamic.datasource.master.name}?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&nullCatalogMeansCurrent=true
+          name: zungen-pda-admin
+          url: jdbc:mysql://192.168.1.172:3306/${spring.datasource.dynamic.datasource.master.name}?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&nullCatalogMeansCurrent=true
           driver-class-name: com.mysql.jdbc.Driver
           username: root
-          password: a123456
+          password: Zungen@123#@!
         slave: # 模拟从库，可根据自己需要修改 # 模拟从库，可根据自己需要修改
-          name: zungen-admin-v1.6
-          url: jdbc:mysql://192.168.124.10:3306/${spring.datasource.dynamic.datasource.slave.name}?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&nullCatalogMeansCurrent=true
+          name: zungen-pda-admin
+          url: jdbc:mysql://192.168.1.172:3306/${spring.datasource.dynamic.datasource.slave.name}?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8&nullCatalogMeansCurrent=true
           driver-class-name: com.mysql.jdbc.Driver
           username: root
-          password: a123456
+          password: Zungen@123#@!
 
   # Redis 配置。Redisson 默认的配置足够使用，一般不需要进行调优
   redis:
-    host: localhost # 地址
+    host: 192.168.1.172 # 地址
     port: 6379 # 端口
     database: 1 # 数据库索引
 #    password: 123456 # 密码，建议生产环境开启
